Fix for editing events with overlapping checks enabled

--- a/component/admin/assets/css/eventsadmin.css
+++ b/component/admin/assets/css/eventsadmin.css
@@ -160,3 +160,39 @@ fieldset.checkboxes li {
     margin-right:0px;
     list-style: none;
 }
+
+/* Editing styles */
+td.r1, span.r1 {
+	background-color:#eeeeee!important;
+	padding:5px 5px 0px 0px;
+}
+td.r2, span.r2 {
+	padding-right:5px;
+}
+div#jevents input,div#jevents select,div#jevents textarea,div#jevents inputbox {
+	padding:3px 5px;
+}
+
+div#jevoverlapwarning {
+	border:solid 1px red;
+	padding:5px;
+	display:none;
+}
+div#jevoverlapwarning h4 {
+	font-weight:bold;
+	margin:5px 0px;
+}
+
+.jev_edit_event_notice {
+	width:500px;
+}
+a#colorPickButton {
+	text-decoration:none;
+	padding:5px;
+}
+.icon-32-save 			{ background-image: url(../images/icon-32-save.png); }
+.icon-32-edit 			{ background-image: url(../images/icon-32-edit.png); }
+.icon-32-cancel 		{ background-image: url(../images/icon-32-cancel.png); }
+.icon-32-apply 		{ background-image: url(../images/icon-32-apply.png); }
+
+#jevents label {display:inline;}
